# djamal

./: LICENSE  README.md  pyproject.toml  setup.py
djamal/management/commands/: djamal.py
management/commands/: djamal.py
